fix: z-index card

--- a/content/assets/css/templatemo-digimedia-v3.css
+++ b/content/assets/css/templatemo-digimedia-v3.css
@@ -1505,7 +1505,7 @@ Portfolio
   top: 0px;
   width: 677px;
   height: 759px;
-  z-index: 1;
+
 }
 
 .our-portfolio .section-heading {
